[package]
name = "NFT-Farming-Solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_farming_solana"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
solana-program = "1.8.0"

[dependencies.spl-token]
version = "3.1.1"
features = ["no-entrypoint"]
